fix: not properly handling existing passengers set through bukkit